--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,8 @@
-# Environment variables
+# ==============================================================================
+# SECRETS & ENVIRONMENT VARIABLES
+# ==============================================================================
+# Environment files with API tokens (HF_TOKEN, GITHUB_TOKEN, GEMINI_API_KEY)
 .env
-
-# Virtual Environment (created with python -m venv .)
-bin/
-include/
-lib/
-pyvenv.cfg
-Scripts/
-
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# Environments
-.venv/
-venv/
-ENV/
-env/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+.env.local
+.env.*.local
+*.env
